--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -1,2 +1,2 @@
-{% include css/bootstrap.min.css %}
-{% include css/main.css %}
+{% include css/bootstrap.min.css | prepend: site.url %}
+{% include css/main.css | prepend: site.url %}
